# platonic-queue

./: .travis.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
docs/: conf.py
docs/_templates/: badges.html  github.html  moreinfo.html
platonic_queue/: chunkify.py  list.py  queue.py  serde.py  sqs.py
tests/: test_chunkify.py
tests/test_example/: test_some_function.py
tests/test_list/: test_put.py
tests/test_sqs/: fibonacci_queue.py  test_get.py  test_init.py  test_put.py
