[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "platonic-queue"
version = "0.1.0"
description = "Abstract acknowledgement queue concept, implemented over multiple backends."
license = "MIT"

authors = []

readme = "README.md"

repository = "https://github.com/platonic/platonic-queue"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.6"

# AWS SQS backend
boto3 = {version = "^1.14.8", extras = ["sqs"]}
boto3_type_annotations = {version = "^0.3.1", extras = ["sqs"]}


[tool.poetry.dev-dependencies]
mypy = "^0.782"

wemake-python-styleguide = "^0.14"
flake8-pytest-style = "^1.2"
nitpick = "^0.22"

safety = "^1.9"

pytest = "^5.4"
pytest-cov = "^2.10"
pytest-randomly = "^3.4"

sphinx = "^2.2"
sphinx-autodoc-typehints = "^1.10"
doc8 = "^0.8"
m2r = "^0.2"
tomlkit = "^0.6"
moto = {version = "^1.3.14", extras = ["sqs"]}
